[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpze"
dynamic = ["version"]
dependencies = [
    "keystone-engine>=0.9.2",
]
requires-python = ">=3.11"
authors = [ {name = "ObeliskGate"} ]
readme = "README.md"
description = "rpze: Remote Python, Zombie: Endless"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Chinese (Simplified)"
]

[project.urls]
Repository = "https://github.com/ObeliskGate/rpze.git" 

[tool.hatch.version]
path = "src/rpze/__init__.py"

[tool.hatch.build.targets.wheel]
artifacts = [
  "*.pyd",
  "*.pdb",
  "/src/rpze/bin",
]
core-metadata-version = "2.1"

[tool.hatch.build.targets.sdist]
core-metadata-version = "2.1"

[tool.hatch.build.targets.wheel.hooks.custom]