[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpze"
version = "0.0.1a6"
dependencies = [
    "keystone-engine>=0.9.2"
]
requires-python = ">=3.11"
authors = [ {name = "ObeliskGate"} ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Chinese (Simplified)"
]

[project.urls]
Repository = "https://github.com/ObeliskGate/rpze.git" 

[tool.setuptools.package-data]
"*" = ["*.pyd", "*.pyi", "rp_dll.dll", "rp_injector.exe"] 