[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rpze"
version = "0.1.1"
dependencies = [
    "keystone-engine>=0.9.2",
]
requires-python = ">=3.11"
authors = [ {name = "ObeliskGate"} ]
readme = "README.md"
description = "rpze: Remote Python, Zombie: Endless"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Chinese (Simplified)"
]

[project.urls]
Repository = "https://github.com/ObeliskGate/rpze.git" 

[tool.setuptools.package-data]
"*" = ["*.pyd", "*.pyi", "rp_dll.dll", "rp_injector.exe"] 